// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<LineRouteList /> Renders the route with stops along its geometry 1`] = `
<DocumentFragment>
  <div>
    <div
      class="flex items-center"
      data-headlessui-state=""
    >
      <label
        class="text-base font-normal my-4 mr-4"
        data-headlessui-state=""
        for="headlessui-control-:r0:"
        id="headlessui-label-:r1:"
      >
        Näytä reittiin kuulumattomat pysäkit
      </label>
      <button
        aria-checked="false"
        aria-labelledby="headlessui-label-:r1:"
        class="relative inline-flex h-6 w-11 items-center rounded-full border transition-colors focus-visible:ring border-grey"
        data-headlessui-state=""
        data-testid="LineRouteList::showUnusedStopsSwitch"
        id="headlessui-control-:r0:"
        role="switch"
        tabindex="0"
        type="button"
      >
        <span
          class="inline-block h-6 w-6 transform rounded-full border bg-white transition-transform -translate-x-0.5 border-grey"
        />
      </button>
      <span
        hidden=""
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
      />
    </div>
    <ul>
      <li
        data-testid="LineRouteListItem"
      >
        <div
          class="relative grid min-h-16 items-center bg-background align-middle sm:grid-cols-12 md:grid-cols-24 border-l-10 border-hsl-dark-green"
          data-testid="RouteRow::65x-outbound"
        >
          <div
            class="col-span-3 flex h-full items-center justify-evenly"
            id="direction-and-label-65x-null-outbound"
          >
            <span
              class="relative flex h-9 w-9 items-center justify-center bg-brand text-2xl font-bold text-white"
              data-testid="DirectionBadge"
              title="1 - Keskustasta pois"
            >
              <span
                aria-hidden="true"
                aria-label="1 - Keskustasta pois"
                data-testid="DirectionBadge::outbound"
              >
                1
              </span>
            </span>
            <span
              class="w-[6ch] text-xl"
              data-testid="RouteRow::label"
            >
              <b>
                65x
              </b>
            </span>
          </div>
          <span
            class="col-span-8 text-xl"
            data-testid="RouteRow::name"
          >
            Reitti A - B FI
          </span>
          <a
            class="rounded-full flex h-10 w-10 items-center justify-center border border-grey bg-white hover:outline hover:outline-1 hover:outline-tweaked-brand hover:border-tweaked-brand hover:bg-opacity-50 ml-0"
            data-discover="true"
            data-testid="RouteRow::editRouteButton"
            href="/routes/03d55414-e5cf-4cce-9faf-d86ccb7e5f98/edit?observationDate=2017-02-14"
            title="Muokkaa reittiä 65x, suunta 1"
          >
            <svg
              aria-hidden="true"
              class="text-2xl text-tweaked-brand"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 0 0 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
              />
            </svg>
          </a>
          <span
            class="col-span-4 text-center md:text-sm lg:text-base"
            data-testid="RouteRow::validityPeriod"
          >
            Voimassa 1.1.2000 - 13.12.2050
          </span>
          <div
            class="flex justify-center"
          />
          <span
            class="col-span-4 text-center"
            data-testid="RouteRow::lastEdited"
          >
            !14.2.2017 14.51
            <svg
              aria-hidden="true"
              class="ml-1 inline text-xl text-tweaked-brand"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M13 3a9 9 0 0 0-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42A8.954 8.954 0 0 0 13 21a9 9 0 0 0 0-18zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"
              />
            </svg>
          </span>
          <div
            class="col-span-2 flex h-full items-center justify-center border-l-4 border-white"
          >
            <button
              class="text-center h-10 w-10 rounded-full border border-grey bg-white text-tweaked-brand hover:outline hover:outline-1 hover:outline-tweaked-brand hover:border-tweaked-brand hover:bg-opacity-50 disabled:pointer-events-none disabled:bg-background disabled:opacity-70"
              data-testid="RouteRow::showRouteButton"
              title="Näytä kartalla reitti 65x, suunta 1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="text-2xl inline text-center"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M18 8c0-3.31-2.69-6-6-6S6 4.69 6 8c0 4.5 6 11 6 11s6-6.5 6-11zm-8 0c0-1.1.9-2 2-2s2 .9 2 2a2 2 0 1 1-4 0zM5 20v2h14v-2H5z"
                />
              </svg>
            </button>
          </div>
          <button
            aria-controls="route-stop-list"
            aria-expanded="false"
            class="text-center h-full border-l-4 border-white"
            data-testid="RouteRow::toggleAccordion"
            title="Näytä pysäkit reitille 65x, suunta 1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="text-tweaked-brand pointer-events-none text-3xl inline text-center"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0V0z"
                fill="none"
              />
              <path
                d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
              />
            </svg>
          </button>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`<LineRouteList /> Renders the route with stops along its geometry 2`] = `
<DocumentFragment>
  <div>
    <div
      class="flex items-center"
      data-headlessui-state=""
    >
      <label
        class="text-base font-normal my-4 mr-4"
        data-headlessui-state=""
        for="headlessui-control-:r0:"
        id="headlessui-label-:r1:"
      >
        Näytä reittiin kuulumattomat pysäkit
      </label>
      <button
        aria-checked="false"
        aria-labelledby="headlessui-label-:r1:"
        class="relative inline-flex h-6 w-11 items-center rounded-full border transition-colors focus-visible:ring border-grey"
        data-headlessui-state=""
        data-testid="LineRouteList::showUnusedStopsSwitch"
        id="headlessui-control-:r0:"
        role="switch"
        tabindex="0"
        type="button"
      >
        <span
          class="inline-block h-6 w-6 transform rounded-full border bg-white transition-transform -translate-x-0.5 border-grey"
        />
      </button>
      <span
        hidden=""
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
      />
    </div>
    <ul>
      <li
        data-testid="LineRouteListItem"
      >
        <div
          class="relative grid min-h-16 items-center bg-background align-middle sm:grid-cols-12 md:grid-cols-24 border-l-10 border-hsl-dark-green"
          data-testid="RouteRow::65x-outbound"
        >
          <div
            class="col-span-3 flex h-full items-center justify-evenly"
            id="direction-and-label-65x-null-outbound"
          >
            <span
              class="relative flex h-9 w-9 items-center justify-center bg-brand text-2xl font-bold text-white"
              data-testid="DirectionBadge"
              title="1 - Keskustasta pois"
            >
              <span
                aria-hidden="true"
                aria-label="1 - Keskustasta pois"
                data-testid="DirectionBadge::outbound"
              >
                1
              </span>
            </span>
            <span
              class="w-[6ch] text-xl"
              data-testid="RouteRow::label"
            >
              <b>
                65x
              </b>
            </span>
          </div>
          <span
            class="col-span-8 text-xl"
            data-testid="RouteRow::name"
          >
            Reitti A - B FI
          </span>
          <a
            class="rounded-full flex h-10 w-10 items-center justify-center border border-grey bg-white hover:outline hover:outline-1 hover:outline-tweaked-brand hover:border-tweaked-brand hover:bg-opacity-50 ml-0"
            data-discover="true"
            data-testid="RouteRow::editRouteButton"
            href="/routes/03d55414-e5cf-4cce-9faf-d86ccb7e5f98/edit?observationDate=2017-02-14"
            title="Muokkaa reittiä 65x, suunta 1"
          >
            <svg
              aria-hidden="true"
              class="text-2xl text-tweaked-brand"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 0 0 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
              />
            </svg>
          </a>
          <span
            class="col-span-4 text-center md:text-sm lg:text-base"
            data-testid="RouteRow::validityPeriod"
          >
            Voimassa 1.1.2000 - 13.12.2050
          </span>
          <div
            class="flex justify-center"
          />
          <span
            class="col-span-4 text-center"
            data-testid="RouteRow::lastEdited"
          >
            !14.2.2017 14.51
            <svg
              aria-hidden="true"
              class="ml-1 inline text-xl text-tweaked-brand"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M13 3a9 9 0 0 0-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42A8.954 8.954 0 0 0 13 21a9 9 0 0 0 0-18zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"
              />
            </svg>
          </span>
          <div
            class="col-span-2 flex h-full items-center justify-center border-l-4 border-white"
          >
            <button
              class="text-center h-10 w-10 rounded-full border border-grey bg-white text-tweaked-brand hover:outline hover:outline-1 hover:outline-tweaked-brand hover:border-tweaked-brand hover:bg-opacity-50 disabled:pointer-events-none disabled:bg-background disabled:opacity-70"
              data-testid="RouteRow::showRouteButton"
              title="Näytä kartalla reitti 65x, suunta 1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="text-2xl inline text-center"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M18 8c0-3.31-2.69-6-6-6S6 4.69 6 8c0 4.5 6 11 6 11s6-6.5 6-11zm-8 0c0-1.1.9-2 2-2s2 .9 2 2a2 2 0 1 1-4 0zM5 20v2h14v-2H5z"
                />
              </svg>
            </button>
          </div>
          <button
            aria-controls="route-stop-list"
            aria-expanded="true"
            class="text-center h-full border-l-4 border-white"
            data-testid="RouteRow::toggleAccordion"
            title="Piilota pysäkit reitiltä 65x, suunta 1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="text-tweaked-brand pointer-events-none text-3xl inline text-center"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M7.41 15.41 12 10.83l4.59 4.58L18 14l-6-6-6 6z"
              />
            </svg>
          </button>
        </div>
        <ul
          id="route-stop-list"
        >
          <li
            aria-labelledby="direction-and-label-65x-null-outbound"
            class="relative grid min-h-16 items-center border-r sm:grid-cols-12 md:grid-cols-24 after:absolute after:bottom-0 after:left-0 after:right-0 after:border-b-2 after:border-gray-100 border-l-10 border-hsl-dark-green"
            data-testid="RouteStopListItem::container"
          >
            <div
              class="col-span-3 items-center justify-center text-center text-2xl"
            >
              <a
                data-testid="RouteStopListItem::label"
                href="/stop-registry/stops/H1234?observationDate=2017-02-14"
                title="Näytä pysäkin H1234 tiedot"
              >
                H1234
              </a>
            </div>
            <div
              class="col-span-9 flex items-center"
              data-testid="RouteStopListItem::name"
            >
              <span>
                -
              </span>
            </div>
            <span
              class="col-span-4 text-center"
              data-testid="RouteStopListItem::validityPeriod"
            >
              Voimassa 1.1.2000 - 13.12.2050
            </span>
            <div
              class="items-center"
            />
            <span
              class="col-span-4 text-center"
              data-testid="RouteStopListItem::lastEdited"
            >
              !14.2.2017 14.51
              <svg
                aria-hidden="true"
                class="ml-1 inline text-xl text-tweaked-brand"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M13 3a9 9 0 0 0-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42A8.954 8.954 0 0 0 13 21a9 9 0 0 0 0-18zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"
                />
              </svg>
            </span>
            <div
              class="col-span-2 flex justify-center"
            >
              <div>
                <span
                  class="text-grey"
                  data-testid="RouteStopListItem::hastusCode"
                >
                  1KOSKS
                </span>
              </div>
            </div>
            <div
              class=""
              data-headlessui-state=""
            >
              <button
                aria-expanded="false"
                aria-haspopup="menu"
                class="mx-auto flex items-center rounded-full"
                data-headlessui-state=""
                data-testid="StopActionsDropdown::menu"
                id="headlessui-menu-button-:r5:"
                title="Lisää toimintoja pysäkille H1234"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="text-3xl text-brand"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </button>
            </div>
          </li>
          <li
            aria-labelledby="direction-and-label-65x-null-outbound"
            class="relative grid min-h-16 items-center border-r sm:grid-cols-12 md:grid-cols-24 after:absolute after:bottom-0 after:left-0 after:right-0 after:border-b-2 after:border-gray-100 border-l-10 border-hsl-dark-green"
            data-testid="RouteStopListItem::container"
          >
            <div
              class="col-span-3 items-center justify-center text-center text-2xl"
            >
              <a
                data-testid="RouteStopListItem::label"
                href="/stop-registry/stops/H1236?observationDate=2017-02-14"
                title="Näytä pysäkin H1236 tiedot"
              >
                H1236
              </a>
            </div>
            <div
              class="col-span-9 flex items-center"
              data-testid="RouteStopListItem::name"
            >
              <span>
                -
              </span>
            </div>
            <span
              class="col-span-4 text-center"
              data-testid="RouteStopListItem::validityPeriod"
            >
              Voimassa 1.1.2000 - 13.12.2050
            </span>
            <div
              class="items-center"
            />
            <span
              class="col-span-4 text-center"
              data-testid="RouteStopListItem::lastEdited"
            >
              !14.2.2017 14.51
              <svg
                aria-hidden="true"
                class="ml-1 inline text-xl text-tweaked-brand"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M13 3a9 9 0 0 0-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42A8.954 8.954 0 0 0 13 21a9 9 0 0 0 0-18zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"
                />
              </svg>
            </span>
            <div
              class="col-span-2 flex justify-center"
            >
              <div>
                <span
                  class="text-grey"
                  data-testid="RouteStopListItem::hastusCode"
                >
                  1ESIM
                </span>
              </div>
            </div>
            <div
              class=""
              data-headlessui-state=""
            >
              <button
                aria-expanded="false"
                aria-haspopup="menu"
                class="mx-auto flex items-center rounded-full"
                data-headlessui-state=""
                data-testid="StopActionsDropdown::menu"
                id="headlessui-menu-button-:rb:"
                title="Lisää toimintoja pysäkille H1236"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="text-3xl text-brand"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </button>
            </div>
          </li>
        </ul>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`<LineRouteList /> Renders the route with stops along its geometry 3`] = `
<DocumentFragment>
  <div>
    <div
      class="flex items-center"
      data-headlessui-state=""
    >
      <label
        class="text-base font-normal my-4 mr-4"
        data-headlessui-state=""
        for="headlessui-control-:r0:"
        id="headlessui-label-:r1:"
      >
        Näytä reittiin kuulumattomat pysäkit
      </label>
      <button
        aria-checked="true"
        aria-labelledby="headlessui-label-:r1:"
        class="relative inline-flex h-6 w-11 items-center rounded-full border transition-colors focus-visible:ring border-brand bg-brand"
        data-changing=""
        data-checked=""
        data-headlessui-state="checked changing"
        data-testid="LineRouteList::showUnusedStopsSwitch"
        id="headlessui-control-:r0:"
        role="switch"
        tabindex="0"
        type="button"
      >
        <span
          class="inline-block h-6 w-6 transform rounded-full border bg-white transition-transform translate-x-5 border-brand"
        />
      </button>
      <span
        hidden=""
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
      />
    </div>
    <ul>
      <li
        data-testid="LineRouteListItem"
      >
        <div
          class="relative grid min-h-16 items-center bg-background align-middle sm:grid-cols-12 md:grid-cols-24 border-l-10 border-hsl-dark-green"
          data-testid="RouteRow::65x-outbound"
        >
          <div
            class="col-span-3 flex h-full items-center justify-evenly"
            id="direction-and-label-65x-null-outbound"
          >
            <span
              class="relative flex h-9 w-9 items-center justify-center bg-brand text-2xl font-bold text-white"
              data-testid="DirectionBadge"
              title="1 - Keskustasta pois"
            >
              <span
                aria-hidden="true"
                aria-label="1 - Keskustasta pois"
                data-testid="DirectionBadge::outbound"
              >
                1
              </span>
            </span>
            <span
              class="w-[6ch] text-xl"
              data-testid="RouteRow::label"
            >
              <b>
                65x
              </b>
            </span>
          </div>
          <span
            class="col-span-8 text-xl"
            data-testid="RouteRow::name"
          >
            Reitti A - B FI
          </span>
          <a
            class="rounded-full flex h-10 w-10 items-center justify-center border border-grey bg-white hover:outline hover:outline-1 hover:outline-tweaked-brand hover:border-tweaked-brand hover:bg-opacity-50 ml-0"
            data-discover="true"
            data-testid="RouteRow::editRouteButton"
            href="/routes/03d55414-e5cf-4cce-9faf-d86ccb7e5f98/edit?observationDate=2017-02-14"
            title="Muokkaa reittiä 65x, suunta 1"
          >
            <svg
              aria-hidden="true"
              class="text-2xl text-tweaked-brand"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 0 0 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
              />
            </svg>
          </a>
          <span
            class="col-span-4 text-center md:text-sm lg:text-base"
            data-testid="RouteRow::validityPeriod"
          >
            Voimassa 1.1.2000 - 13.12.2050
          </span>
          <div
            class="flex justify-center"
          />
          <span
            class="col-span-4 text-center"
            data-testid="RouteRow::lastEdited"
          >
            !14.2.2017 14.51
            <svg
              aria-hidden="true"
              class="ml-1 inline text-xl text-tweaked-brand"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M13 3a9 9 0 0 0-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42A8.954 8.954 0 0 0 13 21a9 9 0 0 0 0-18zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"
              />
            </svg>
          </span>
          <div
            class="col-span-2 flex h-full items-center justify-center border-l-4 border-white"
          >
            <button
              class="text-center h-10 w-10 rounded-full border border-grey bg-white text-tweaked-brand hover:outline hover:outline-1 hover:outline-tweaked-brand hover:border-tweaked-brand hover:bg-opacity-50 disabled:pointer-events-none disabled:bg-background disabled:opacity-70"
              data-testid="RouteRow::showRouteButton"
              title="Näytä kartalla reitti 65x, suunta 1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="text-2xl inline text-center"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M18 8c0-3.31-2.69-6-6-6S6 4.69 6 8c0 4.5 6 11 6 11s6-6.5 6-11zm-8 0c0-1.1.9-2 2-2s2 .9 2 2a2 2 0 1 1-4 0zM5 20v2h14v-2H5z"
                />
              </svg>
            </button>
          </div>
          <button
            aria-controls="route-stop-list"
            aria-expanded="true"
            class="text-center h-full border-l-4 border-white"
            data-testid="RouteRow::toggleAccordion"
            title="Piilota pysäkit reitiltä 65x, suunta 1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="text-tweaked-brand pointer-events-none text-3xl inline text-center"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M7.41 15.41 12 10.83l4.59 4.58L18 14l-6-6-6 6z"
              />
            </svg>
          </button>
        </div>
        <ul
          id="route-stop-list"
        >
          <li
            aria-labelledby="direction-and-label-65x-null-outbound"
            class="relative grid min-h-16 items-center border-r sm:grid-cols-12 md:grid-cols-24 after:absolute after:bottom-0 after:left-0 after:right-0 after:border-b-2 after:border-gray-100 border-l-10 border-hsl-dark-green"
            data-testid="RouteStopListItem::container"
          >
            <div
              class="col-span-3 items-center justify-center text-center text-2xl"
            >
              <a
                data-testid="RouteStopListItem::label"
                href="/stop-registry/stops/H1234?observationDate=2017-02-14"
                title="Näytä pysäkin H1234 tiedot"
              >
                H1234
              </a>
            </div>
            <div
              class="col-span-9 flex items-center"
              data-testid="RouteStopListItem::name"
            >
              <span>
                -
              </span>
            </div>
            <span
              class="col-span-4 text-center"
              data-testid="RouteStopListItem::validityPeriod"
            >
              Voimassa 1.1.2000 - 13.12.2050
            </span>
            <div
              class="items-center"
            />
            <span
              class="col-span-4 text-center"
              data-testid="RouteStopListItem::lastEdited"
            >
              !14.2.2017 14.51
              <svg
                aria-hidden="true"
                class="ml-1 inline text-xl text-tweaked-brand"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M13 3a9 9 0 0 0-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42A8.954 8.954 0 0 0 13 21a9 9 0 0 0 0-18zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"
                />
              </svg>
            </span>
            <div
              class="col-span-2 flex justify-center"
            >
              <div>
                <span
                  class="text-grey"
                  data-testid="RouteStopListItem::hastusCode"
                >
                  1KOSKS
                </span>
              </div>
            </div>
            <div
              class=""
              data-headlessui-state=""
            >
              <button
                aria-expanded="false"
                aria-haspopup="menu"
                class="mx-auto flex items-center rounded-full"
                data-headlessui-state=""
                data-testid="StopActionsDropdown::menu"
                id="headlessui-menu-button-:r5:"
                title="Lisää toimintoja pysäkille H1234"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="text-3xl text-brand"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </button>
            </div>
          </li>
          <li
            aria-labelledby="direction-and-label-65x-null-outbound"
            class="relative grid min-h-16 items-center border-r sm:grid-cols-12 md:grid-cols-24 after:absolute after:bottom-0 after:left-0 after:right-0 after:border-b-2 after:border-gray-100 border-l-10 border-hsl-dark-green bg-background text-dark-grey"
            data-testid="RouteStopListItem::container"
          >
            <div
              class="col-span-3 items-center justify-center text-center text-2xl"
            >
              <a
                data-testid="RouteStopListItem::label"
                href="/stop-registry/stops/H1235?observationDate=2017-02-14"
                title="Näytä pysäkin H1235 tiedot"
              >
                H1235
              </a>
            </div>
            <div
              class="col-span-9 flex items-center"
              data-testid="RouteStopListItem::name"
            >
              <span>
                -
              </span>
            </div>
            <span
              class="col-span-4 text-center"
              data-testid="RouteStopListItem::validityPeriod"
            >
              Ei reitin käytössä
            </span>
            <div
              class="items-center"
            />
            <span
              class="col-span-4 text-center"
              data-testid="RouteStopListItem::lastEdited"
            >
              !14.2.2017 14.51
              <svg
                aria-hidden="true"
                class="ml-1 inline text-xl text-tweaked-brand"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M13 3a9 9 0 0 0-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42A8.954 8.954 0 0 0 13 21a9 9 0 0 0 0-18zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"
                />
              </svg>
            </span>
            <div
              class="col-span-2 flex justify-center"
            >
              <div>
                <span
                  class="text-grey"
                  data-testid="RouteStopListItem::hastusCode"
                >
                  1OLK
                </span>
              </div>
            </div>
            <div
              class=""
              data-headlessui-state=""
            >
              <button
                aria-expanded="false"
                aria-haspopup="menu"
                class="mx-auto flex items-center rounded-full"
                data-headlessui-state=""
                data-testid="StopActionsDropdown::menu"
                id="headlessui-menu-button-:rh:"
                title="Lisää toimintoja pysäkille H1235"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="text-3xl text-brand"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </button>
            </div>
          </li>
          <li
            aria-labelledby="direction-and-label-65x-null-outbound"
            class="relative grid min-h-16 items-center border-r sm:grid-cols-12 md:grid-cols-24 after:absolute after:bottom-0 after:left-0 after:right-0 after:border-b-2 after:border-gray-100 border-l-10 border-hsl-dark-green"
            data-testid="RouteStopListItem::container"
          >
            <div
              class="col-span-3 items-center justify-center text-center text-2xl"
            >
              <a
                data-testid="RouteStopListItem::label"
                href="/stop-registry/stops/H1236?observationDate=2017-02-14"
                title="Näytä pysäkin H1236 tiedot"
              >
                H1236
              </a>
            </div>
            <div
              class="col-span-9 flex items-center"
              data-testid="RouteStopListItem::name"
            >
              <span>
                -
              </span>
            </div>
            <span
              class="col-span-4 text-center"
              data-testid="RouteStopListItem::validityPeriod"
            >
              Voimassa 1.1.2000 - 13.12.2050
            </span>
            <div
              class="items-center"
            />
            <span
              class="col-span-4 text-center"
              data-testid="RouteStopListItem::lastEdited"
            >
              !14.2.2017 14.51
              <svg
                aria-hidden="true"
                class="ml-1 inline text-xl text-tweaked-brand"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M13 3a9 9 0 0 0-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42A8.954 8.954 0 0 0 13 21a9 9 0 0 0 0-18zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"
                />
              </svg>
            </span>
            <div
              class="col-span-2 flex justify-center"
            >
              <div>
                <span
                  class="text-grey"
                  data-testid="RouteStopListItem::hastusCode"
                >
                  1ESIM
                </span>
              </div>
            </div>
            <div
              class=""
              data-headlessui-state=""
            >
              <button
                aria-expanded="false"
                aria-haspopup="menu"
                class="mx-auto flex items-center rounded-full"
                data-headlessui-state=""
                data-testid="StopActionsDropdown::menu"
                id="headlessui-menu-button-:rb:"
                title="Lisää toimintoja pysäkille H1236"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="text-3xl text-brand"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </button>
            </div>
          </li>
        </ul>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
